--- a/BREAKING BAD Characters/index.html
+++ b/BREAKING BAD Characters/index.html
@@ -7,8 +7,8 @@
     <title>BREAKING BAD Characters</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="https://github.com/MohammedHasan99/API/blob/main/BREAKING%20BAD%20Characters/css/style.css">
-    <link rel="icon" type="image/x-icon" href="https://github.com/MohammedHasan99/API/blob/main/BREAKING%20BAD%20Characters/css/icon3.ico">
+    <link rel="stylesheet" href="https://github.com/MohammedHasan99/API/BREAKING BAD Characters/css/style.css">
+    <link rel="icon" type="image/x-icon" href="https://github.com/MohammedHasan99/API/BREAKING BAD Characters/css/icon3.ico">
 </head>
 <body>
 <div class="cointainer">
