--- a/BREAKING BAD Characters/index.html
+++ b/BREAKING BAD Characters/index.html
@@ -13,11 +13,11 @@
 <body>
 <div class="cointainer">
     <div id="header">
-        <h1>BREAKING BAD API</h1>
+        <h1>BREAKING BAD CHARATERS</h1>
         
     </div>
     <div id="content">
 
-
+<script src="script.js"></script>
 </body>
 </html>
